# Notar-e

./: .gitignore  LICENSE.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: appointments.py  auth.py  documents.py  notifications.py  signatures.py
backend/app/core/: auth.py  config.py  db.py  hashing.py  secrets.py
backend/app/enums/: appointment_status.py  document_status.py  document_types.py  signing_roles.py  user_roles.py
backend/app/models/: appointment.py  document.py  document_signature_audit.py  notification.py  user.py
backend/app/schemas/: appointment.py  document.py  signature.py  user.py
backend/app/services/: appointment_service.py  blockchain_service.py  document_service.py  storage_service.py
backend/app/utils/: locks.py  pdf_signing.py  signing_roles.py
backend/tests/: test_document_model.py  test_document_service.py  test_locks.py  test_pdf_signing.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.spec.ts  app.ts
frontend/src/components/dashboard-appointments/: dashboard-appointments.html  dashboard-appointments.spec.ts  dashboard-appointments.ts
frontend/src/components/dashboard-blockchain-status/: dashboard-blockchain-status.html  dashboard-blockchain-status.spec.ts  dashboard-blockchain-status.ts
frontend/src/components/dashboard-current-documents/: dashboard-current-documents.html  dashboard-current-documents.spec.ts  dashboard-current-documents.ts
frontend/src/components/footer/: footer.html
(+13 files in other folders)
