[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Allen Bercero",email = "allenbercero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

[tool.poetry.dependencies]
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
